--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting to Montink</title>
-    <meta http-equiv="refresh" content="0; URL=https://montink.com/camisetas-generativas?cat%5B71126%5D=71126">
+    <title>Redirecting to...</title>
+    <meta http-equiv="refresh" content="0; URL=https://link.pullrecast.dev/loja">
   </head>
-  <link rel="canonical" href="https://montink.com/camisetas-generativas?cat%5B71126%5D=71126">
+  <link rel="canonical" href="https://link.pullrecast.dev/loja">
 </html>
